[project]
name = "coursework"
version = "0.1.0"
description = "Code written for the data analysis report coursework of the CEG8006 module."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "kaleido>=1.2.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
